# disasterman

./: .gitignore  DEPLOY_TO_HF.txt  Dockerfile  MANUAL_TESTING_PROCEDURE.txt  README.md  SUBMISSION_PROCEDURE.txt  colab_disaster_agent.py  copilottaskdone.md  demo_models.py  demo_runner.py  demo_scenarios.py  environment.py  extra feature added.md  graders.py  inference.py  inference_v2.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  tasks.py  test_env.py
agents/: __init__.py  action_agent.py  greedy_agent.py  planner_agent.py  random_agent.py  train_zone_scorer.py  triage_agent.py  zone_scorer.py  zone_scorer_weights.pt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentReasoningPanel.tsx  CommandCenterTab.tsx  CommsInterceptTerminal.tsx  CompareTab.tsx  CopilotQaPanel.tsx  DisasterMap.tsx  EventFeed.tsx  LandingPage.tsx  LeafletDemoMap.tsx  LiveDemoTab.tsx  ProbabilityMatrix.tsx  ResourceBar.tsx  ScoreGraph.tsx  ScorePanel.tsx  SimulationTab.tsx  StrategyGeneratorTab.tsx  SystemLogsTab.tsx
frontend/src/data/: bengaluruZones.ts
frontend/src/hooks/: useSimulation.ts
frontend/src/store/: liveSimStore.ts
server/: app.py
