[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "disaster-relief-coordination-env"
version = "3.0.0"
description = "Multi-zone disaster relief coordination environment for AI agent training (OpenEnv)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "torch>=2.2.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/krishpotanwar/disaster-relief-env"
Repository = "https://github.com/Rajy777/disasterman"
